Make it compile with Java 21 This includes: -add-exports base/sun.net.www.protocol Adding dependency javax.annotation
Simplifying pom to remove things i dont need such as surefire and lemma