@@ -14,128 +14,27 @@
     <artifactId>cling-core</artifactId>
     <packaging>jar</packaging>
 
-    <build>
-        <plugins>
-
-            <!-- Unit tests -->
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <suiteXmlFiles>
-                        <suiteXmlFile>src/test/AllTests.tng.xml</suiteXmlFile>
-                    </suiteXmlFiles>
-                </configuration>
-            </plugin>
-
-            <!-- Source JARs -->
-            <plugin>
-                <artifactId>maven-source-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <!-- Prepare Javadoc for distribution packaging -->
-            <plugin>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>package-javadoc</id>
-                        <phase>prepare-package</phase>
-                        <goals>
-                            <goal>javadoc</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <!-- Generate documentation for distribution packaging -->
-            <plugin>
-                <groupId>org.fourthline.lemma</groupId>
-                <artifactId>lemma-maven-plugin</artifactId>
-                <configuration>
-                    <!-- The directories containing Java (test) sources for citation -->
-                    <sourceDirectories>
-                        <sourceDirectory>src/main/java</sourceDirectory>
-                        <sourceDirectory>src/test/java</sourceDirectory>
-                        <sourceDirectory>../demo/android/browser/src/android</sourceDirectory>
-                        <sourceDirectory>../demo/android/browser/src/main/java</sourceDirectory>
-                        <sourceDirectory>../demo/android/light/src/main/java</sourceDirectory>
-                    </sourceDirectories>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>prepare-package-manual</id>
-                        <phase>prepare-package</phase>
-                        <goals>
-                            <goal>manual</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <!-- Website lifecycle -->
-            <plugin>
-                <artifactId>maven-site-plugin</artifactId>
-                <version>${maven.site.plugin.version}</version>
-                <configuration>
-                    <reportPlugins>
-                        <!-- THESE IGNORE GLOBAL PLUGIN MANAGEMENT! -->
-
-                        <!-- Build the manual for 'site' lifecycle -->
-                        <plugin>
-                            <groupId>org.fourthline.lemma</groupId>
-                            <artifactId>lemma-maven-plugin</artifactId>
-                            <reportSets>
-                                <reportSet>
-                                    <reports>
-                                        <report>site-manual</report>
-                                    </reports>
-                                </reportSet>
-                            </reportSets>
-                            <configuration>
-                                <!-- The directories containing Java (test) sources for citation -->
-                                <sourceDirectories>
-                                    <sourceDirectory>src/main/java</sourceDirectory>
-                                    <sourceDirectory>src/test/java</sourceDirectory>
-                                    <sourceDirectory>../demo/android/browser/src/android</sourceDirectory>
-                                    <sourceDirectory>../demo/android/browser/src/main/java</sourceDirectory>
-                                    <sourceDirectory>../demo/android/light/src/main/java</sourceDirectory>
-                                </sourceDirectories>
-                            </configuration>
-                        </plugin>
-
-                        <!-- Javadoc on the website -->
-                        <plugin>
-                            <artifactId>maven-javadoc-plugin</artifactId>
-                            <reports>
-                                <report>javadoc</report>
-                            </reports>
-                            <configuration>
-                                <quiet>true</quiet>
-                                <detectOfflineLinks>false</detectOfflineLinks>
-                            </configuration>
-                        </plugin>
-
-                        <!-- We want cross-referenced source code -->
-                        <plugin>
-                            <artifactId>maven-jxr-plugin</artifactId>
-                        </plugin>
-
-                    </reportPlugins>
-                </configuration>
-            </plugin>
-
-        </plugins>
-    </build>
-
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+		<build>
+		  <plugins>
+		    <plugin>
+		      <groupId>org.apache.maven.plugins</groupId>
+		      <artifactId>maven-compiler-plugin</artifactId>
+		      <version>3.11.0</version> 
+		      <configuration>
+		        <compilerArgs>
+		          <arg>--add-exports</arg>
+		          <arg>java.base/sun.net.www.protocol.http=ALL-UNNAMED</arg>
+		        </compilerArgs>
+		        <source>21</source>
+		        <target>21</target>
+		      </configuration>
+		    </plugin>
+		  </plugins>
+		</build>
     <dependencies>
-
         <dependency>
             <groupId>org.seamless</groupId>
             <artifactId>seamless-util</artifactId>
@@ -215,6 +114,11 @@
             <version>${kxml.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+    		</dependency>
     </dependencies>
 
 </project>
